# platform.upstream.libzint

./: CMakeLists.txt  Makefile  SetPaths.cmake
backend/: 2of5.c  CMakeLists.txt  DEVELOPER  code.c  code128.c  common.c  common.h  font.h  gb2312.h  gs1.c  gs1.h  large.c  large.h  library.c  libzint.rc  maxipng.h  png.c  ps.c  qr.c  qr.h  reedsol.c  reedsol.h  render.c  sjis.h  upcean.c  zint.h
cmake/modules/: FindZint.cmake
packaging/: zint.spec
